# Chess-Cpp

./: .gitignore  CMakeLists.txt  a.out  board  board.cpp  board.h  constants.h  main  main.cpp  move.h  moveGen.cpp  moveGen.h  tests.cpp  tests.h  undoInfo.h
.cache/clangd/index/: bitboard.cpp.85B3E64811AF24D9.idx  bitboard.hpp.0F0BE4CDB003CDCC.idx  board.cpp.1E45561084F19186.idx  board.cpp.A4ED2EEE95855B56.idx  board.hpp.A0A43F82AA924EA9.idx  board.hpp.F06122AD358CD218.idx  constants.hpp.6FF3A339C60496FE.idx  eval-helpers.cpp.83F625CD0350E033.idx  eval-helpers.cpp.A526501A0996AB5E.idx  eval-helpers.hpp.0E0178E208D8C0C3.idx  eval-helpers.hpp.8E8EAC09FF2352F7.idx  evaluate.cpp.F663AD5F68665871.idx  evaluate.cpp.F7DCB00DA497915A.idx  evaluate.hpp.3BAA79305321ABEF.idx  evaluate.hpp.97D04C79ECB141DA.idx  (+31 more)
data/: constants.hpp  pst.hpp
src/: .attackTables.cpp  .attackTables.hpp  board.cpp  board.hpp  eval-helpers.cpp  eval-helpers.hpp  evaluate.cpp  evaluate.hpp  main  main.cpp  move.hpp  moveGen.cpp  moveGen.hpp  search.cpp  search.hpp  undoInfo.hpp  utils.hpp  zobrist.cpp  zobrist.hpp
src/bitboard/: bitboard.cpp  bitboard.hpp  magic.hpp
src/core/: board.cpp  board.hpp  move.hpp  undoInfo.hpp  utils.hpp
src/eval/: eval-helpers.cpp  eval-helpers.hpp  evaluate.cpp  evaluate.hpp
src/interface/: interface.cpp  interface.hpp  uci.cpp  uci.hpp
src/movegen/: moveGen.cpp  moveGen.hpp
src/search/: ordering.cpp  ordering.hpp  quiescence.cpp  quiescence.hpp  search.cpp  search.hpp  tt.hpp  zobrist.cpp  zobrist.hpp
tests/: tests.cpp  tests.h  tests.hpp
